[package]

name = "leveldb"
version = "0.8.4"
authors = [ "Florian Gilcher <florian.gilcher@asquera.de>" ]

description = "An interface for leveldb"

license = "MIT"
readme = "README.md"

documentation = "http://skade.github.io/leveldb/"
homepage = "https://github.com/skade/leveldb"
repository = "https://github.com/skade/leveldb"

edition = "2018"

[lib]
name = "leveldb"

[dependencies]
db-key = "0.0.5"
libc = "0.2.4"
leveldb-sys = { path = "./leveldb-sys" }

[dev-dependencies]
tempfile = "3.0.5"

[workspace]
members = [
  "leveldb-sys",
]
